--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^2.8.2",
     "babel-plugin-import": "^1.1.1",
     "babel-runtime": "^6.9.2",
+    "blueimp-md5": "^2.7.0",
     "dva": "^1.2.1",
     "promise-polyfill": "^6.0.2",
     "react": "^15.4.0",
