--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dva": "^1.2.1",
     "promise-polyfill": "^6.0.2",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "socket.io": "1.7.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
