--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-runtime": "^6.9.2",
     "blueimp-md5": "^2.7.0",
     "dva": "^1.2.1",
+    "moment": "^2.18.1",
     "promise-polyfill": "^6.0.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
